HMAN-942: Tidied up HearingManagementServiceIT class
Tidied up HearingManagementControllerTest class prior to adding tests for new getCaseSearchResultsPaginated() method.  Changes made:
- Changed class to use constructor for autowiring beans.
- Fixed a number of Sonar issues.
- Changed testValidateHearingRequest_WithPartyDetails() test to testValidateHearingRequest_WithOutIndividualOrOrgDetails().  The original test was identical to testValidateHearingRequest_WithOutOrgDetails().  Test now covers scenario where party details do not have either individual or organisation details.
- Changed testValidateHearingRequest_WhenAmendReasonCodeIsNotNull() and testValidateHearingRequest_WhenAmendReasonCodeIsNull() to check contents of Case Hearing Request amend reasons list.
- Removed redundant white space.